--- a/Mvc/Views/Movies/Index.cshtml
+++ b/Mvc/Views/Movies/Index.cshtml
@@ -9,7 +9,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Create New</a>
 </p>
 
 @using (Html.BeginForm("Index", "Movies", FormMethod.Get))
@@ -19,7 +19,7 @@
         <input class="btn btn-primary" type="submit" value="Search" />
     </div>
 }
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -53,9 +53,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="bi bi-archive-fill"></i>Delete</a>
             </td>
         </tr>
 }
