--- a/Mvc/Views/Shared/_Layout.cshtml
+++ b/Mvc/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         @await Html.PartialAsync("_sidebar")
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
-           @* @await Html.PartialAsync("_navbar")*@
+            @await Html.PartialAsync("_navbar")
             <!-- Main Content -->
             <div id="content">
 
